--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,15 @@
 	border: 1px solid transparent;
 
 }
+/* github style for nav-icon */
+.navbar .git {
+	font-family: 'acme', 'helvetica', 'arial';
+	font-weight: 800;
+	font-size: 28px;
+	transition: .1s linear;
+	border: 1px solid transparent;
+	color:gray;
+}
 /*
 #about {
 	font-size: 24px;
